frontend/src/App.css
.centered {
  text-align: center;
}

.emoji {
  font-size: 30px;
}

td {
  padding-left: 15px !important;
  padding-right: 15px !important;
  padding-top: 0px !important;
  padding-bottom: 0px !important;
  /*font-weight: bold;*/
}

#weather {
  display: inline-block;
}
.App-header {
  /* min-height: 100vh; */
  display: flex;
  flex-direction: row;

  font-size: calc(10px + 2vmin);
  color: black;
}

.App-body {
  /* min-height: 100vh; */
  display: flex;
  flex-direction: column !important;
  font-size: calc(10px + 2vmin);
  color: black;
}

a {
  color: white !important;
  /* text-decoration: None !important; */
}

mark {
  padding-top: 0.25em !important;
  padding-bottom: 0.25em !important;
  padding-left: 0 !important;
  padding-right: 0 !important;
  background: none !important;
  color: #ef853b !important;
}

.dropdown {

  --bs-btn-bg: #ef853b !important;
  --bs-btn-border-color: #ef853b !important;

  --bs-btn-hover-bg: #ef853b !important;
  --bs-btn-hover-border-color: #ef853b !important;

  --bs-btn-active-bg: #ef853b !important;
  --bs-btn-active-border-color: #ef853b !important;

}

button {
  --bs-btn-bg: #ef853b !important;
  --bs-btn-border-color: #ef853b !important;

  --bs-btn-hover-bg: #ef853b !important;
  --bs-btn-hover-border-color: #ef853b !important;

  --bs-btn-active-bg: #ef853b !important;
  --bs-btn-active-border-color: #ef853b !important;
}

.dropdown-item {
  color: black !important;
}

body {
  background-color: #212529 !important;
}
/* body {
  background-image: url("images/background.jpeg") !important;
}

body {
  background-size: cover;
} */

.street-week {
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 10px;
  padding-bottom: 5px;
  border-radius: 25px;
  background-color: #212529;
  height: 400px;
  overflow-y: scroll;
}

.street-week::-webkit-scrollbar {
  -webkit-appearance: none;
  width: 8px;
}

.street-week::-webkit-scrollbar-thumb {
  border-radius: 5px;
  background-color: rgba(255,255,255,.4);
  -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
}

.popup {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 5px;
  padding-bottom: 5px;
  border-radius: 25px;
  width: 40%;
  height: 10%;
  z-index: 10;
  font-size: 20px;
  background-color: #212529;
  border: solid white;
  display: flex;
  justify-content: center;
  align-items: center;
}

.dining-hall {
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 5px;
  padding-bottom: 5px;
  border-radius: 25px;
  background-color: #212529;
  height: 400px;
  overflow-y: scroll;
  /* width: 500px;
  margin-left: 100px; */
}

.dining-hall::-webkit-scrollbar {
  -webkit-appearance: none;
  width: 8px;
}

.dining-hall::-webkit-scrollbar-thumb {
  border-radius: 5px;
  background-color: rgba(255,255,255,.4);
  -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
}

.banner {
  position: fixed;
  bottom: 0px;
  left: 25%;
  width: 50%;
  text-align: center;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 12px;
  padding-bottom: 5px;
  border-radius: 15px;
  background-color: pink;
}

.divider {
  border-bottom-style: solid;
  border-bottom-width: thin;
  font-size: 22px;
}

.row-content {
  padding-top: 10px;
  padding-bottom: 10px;
}

.weather {
  font-size: 18px;
}

.promo {
  width: 300px;
}

@media (max-width: 1450px) {
  .divider {
    padding-top: 10px;
    padding-bottom: 10px;
    border-bottom-style: solid;
    border-bottom-width: thin;
    font-size: 18px !important;
  }

  .promo {
    width: 300px;
  }
}

@media (max-width: 1650px) {

  .weather {
    font-size: 15px !important;
  }

  .promo {
    width: 300px;
  }
}



.no-divider {
  border-style: none;
}

.divider-orange {
  border-bottom-color: #f7752f;
}

.divider-green {
  border-bottom-color: #00FF00;
}

.divider-pink {
  border-bottom-color: #FF00DD;
}

.divider-red {
  border-bottom-color: #FF2A0D;
}

.divider-blue {
  border-bottom-color: #41EAEA;
}

.dance {
  /* padding-left: 10px;
  padding-right: 10px; */
  padding-top: 10px;
  /* padding-bottom: 10px; */
  border-radius: 25px;
  background-color: #212529;
}

.sneaky-links {
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 10px;
  padding-bottom: 10px;
  border-radius: 25px;
  background-color: #212529;
  /* width: 500px; */
}

.weather {
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 10px;
  padding-bottom: 10px;
  border-radius: 25px;
  background-color: #212529;
  /* width: 500px;
  margin: 50px; */
  font-weight: bold !important;
}

.prince {
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 10px;
  padding-bottom: 5px;
  border-radius: 25px;
  background-color: #212529;
  /* width: 500px;
  margin-right: 100px; */
}

/* .dining-hall {
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 5px;
  padding-bottom: 5px;
  border-radius: 25px;
  background-color: #212529;
  /* width: 500px;
  margin-left: 100px; */

